<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alfanthariq.eyechart.MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/colorPrimary"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/toolbar_title"
                android:layout_margin="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/layProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </LinearLayout>
        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="Loading files ..."
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/a"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/secondaryLightColor">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Optotypes"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/menu1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu1"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/menu2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu2"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/menu3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu3"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/menu4"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu4"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/menu6"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu6"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eye Exam"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/menu7"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu7"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu8"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:layout_columnWeight="1"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu8"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu9"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:layout_columnWeight="1"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu9"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu10"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu10"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu12"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu12"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/menu13"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu13"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu14"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu14"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu16"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu16"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <Button
                            android:id="@+id/menu17"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="80dp"
                            android:layout_gravity="fill"
                            android:textColor="@drawable/bright_text_dark_focused"
                            android:background="@drawable/button_bg"
                            android:text="@string/menu17"
                            android:layout_marginRight="5dp"
                            android:textAllCaps="false"
                            android:layout_marginBottom="10dp"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Information"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/menu18"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu18"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/menu19"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu19"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="More"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/menu20"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_gravity="fill"
                        android:textColor="@drawable/bright_text_dark_focused"
                        android:background="@drawable/button_bg"
                        android:text="@string/menu20"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
